--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
       </repository>
+      <repository>
+          <id>sk89q-repo</id>
+          <url>https://maven.enginehub.org/repo/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -71,6 +75,12 @@
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot</artifactId>
           <version>1.8.8-R0.1-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.sk89q.worldguard</groupId>
+          <artifactId>worldguard-legacy</artifactId>
+          <version>6.2</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
